# Sekiro-Calculator

./: .gitignore  AP.txt  CMDCalc.py  Calc.py  Calculator.py  EnemyBaseStats.py  EnemyRef.py  LICENSE  Multipliers.py  PlayerStats.py  README.md  SekiroStatCalculator.py  StatCalc.py  examples.py  index.html  pyproject.toml  sekirocalc.ui
App/: README.md
CSVS/: AreaScaling(Growth).csv  CABullets.csv  FetchData.py  NgCycleScaling(Orbital).csv  PlayerAP.csv  PlayerThrows.csv  Player_Prosthetic_Attacks.csv  Player_SwordCA_Attacks.csv
Sekiro/: Calc.spec  Enemy.py  Lots.py  Multipliers.py  Player.py  Ref.py  Reference.py  Utils.py  __init__.py
Sekiro.egg-info/: PKG-INFO  SOURCES.txt
res/: EnemyBaseStats.py  EnemyRef.py  Lots.py  Multipliers.py  Utils.py
