[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Sekiro"
version = "1.0.0"
description = "A Python package"
readme = "README.md"
authors = [
  { name = "Aero" }
]
license = { text = "GPL-3.0" }
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/AeroliteWasTaken/Sekiro-Calculator"
